fixing spacing between h3-designer and ul

--- a/Final_Project/css/style.css
+++ b/Final_Project/css/style.css
@@ -43,7 +43,7 @@ header h2{
 }
 
 h3{
-	margin-bottom: 0px;
+	margin-bottom: 3px;
 	font-size: 1.3rem;
 }
 
